--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<nz-layout class="app-layout">
+<!-- <nz-layout class="app-layout">
   <nz-sider class="menu-sidebar"
             nzCollapsible
             nzWidth="256px"
@@ -12,29 +12,19 @@
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
-        <span routerLink="/dashboard">Dashboard</span>
+      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
+        <ul>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/route/monitor">Monitor</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/route/workplace">Workplace</a>
+          </li>
+        </ul>
       </li>
       <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
-        <span routerLink="/business">Business</span>
-      </li>
-      <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
-        <span routerLink="/categories">Categories</span>
-      </li>
-      <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
-        <span routerLink="/user">Users</span>
-      </li>
-      <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
-        <span routerLink="/listing">Listing</span>
-      </li>
-      <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
-        <span routerLink="/rewards">Rewards</span>
+        <span nz-icon nzType="Rewards"></span>
+        <span routerLink="/route/rewards">Rewards</span>
       </li>
     </ul>
   </nz-sider>
@@ -55,6 +45,4 @@
       </div>
     </nz-content>
   </nz-layout>
-</nz-layout>
-
-<!-- <router-outlet></router-outlet> -->
+</nz-layout> -->
