--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
       <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
+        <span nz-icon nzType="home" nzTheme="outline"></span>
         <span routerLink="/dashboard">Dashboard</span>
       </li>
       <li nz-menu-item>
@@ -25,16 +25,28 @@
         <span routerLink="/categories">Categories</span>
       </li>
       <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
+        <span nz-icon nzType="user" nzTheme="outline"></span>
         <span routerLink="/user">Users</span>
       </li>
       <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
+        <span nz-icon nzType="unordered-list" nzTheme="outline"></span>
         <span routerLink="/listing">Listing</span>
       </li>
       <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
+        <span nz-icon nzType="database" nzTheme="outline"></span>
         <span routerLink="/rewards">Rewards</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="form" nzTheme="outline"></span>
+        <span routerLink="/forms">Forms</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="dollar" nzTheme="outline"></span>
+        <span routerLink="/adminbanner">Admin Banners</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="usergroup-add" nzTheme="outline"></span> 
+        <span routerLink="/merchantbanner">Merchant Banners</span>
       </li>
     </ul>
   </nz-sider>
@@ -56,5 +68,8 @@
     </nz-content>
   </nz-layout>
 </nz-layout>
+
+
+
 
 <!-- <router-outlet></router-outlet> -->
