--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-/* .login-form {
+.login-form {
     max-width: 300px;
   }
 
@@ -12,4 +12,4 @@
 
   .login-form-button {
     width: 100%;
-  } */
+  }
