--- a/src/app/pages/category/add-sub-category-l1/add-sub-category-l1.component.html
+++ b/src/app/pages/category/add-sub-category-l1/add-sub-category-l1.component.html
@@ -1,1 +1,70 @@
-<p>add-sub-category-l1 works!</p>
+<form
+  nz-form
+  nzLayout="vertical"
+  [formGroup]="validateForm"
+  (ngSubmit)="submitForm()"
+>
+  <h1>Add Sub-Category (L1)</h1>
+
+  <nz-form-item>
+    <nz-form-label
+      [nzSm]="6"
+      [nzXs]="24"
+      nzFor="AENo"
+      nzRequired
+      nzTooltipTitle=" Enter AE Number from PMEC or S Number"
+    >
+      <span>sub-Category(L1) name</span>
+    </nz-form-label>
+    <nz-form-control
+      [nzSm]="14"
+      [nzXs]="24"
+      nzErrorTip="Please input employee Number!"
+    >
+      <input nz-input id="AENo" formControlName="aes" />
+    </nz-form-control>
+  </nz-form-item>
+
+  <nz-form-item>
+    <nz-form-label
+      [nzSm]="6"
+      [nzXs]="24"
+      nzFor="AENo"
+      nzRequired
+      nzTooltipTitle=" Enter AE Number from PMEC or S Number"
+    >
+      <span>Select Parent Category</span>
+    </nz-form-label>
+    <nz-form-control
+      [nzSm]="14"
+      [nzXs]="24"
+      nzErrorTip="Please input employee Number!"
+    >
+      <input nz-input id="AENo" formControlName="aes" />
+    </nz-form-control>
+  </nz-form-item>
+
+<div>
+    <span>Sub-Category Image</span>
+  <nz-upload
+  class="avatar-uploader"
+  nzAction="https://www.mocky.io/v2/5cc8019d300000980a055e76"
+  nzName="avatar"
+  nzListType="picture-card"
+  [nzShowUploadList]="false"
+  [nzBeforeUpload]="beforeUpload"
+  (nzChange)="handleChange($event)"
+>
+  <ng-container *ngIf="!avatarUrl">
+    <span class="upload-icon" nz-icon [nzType]="loading ? 'loading' : 'plus'"></span>
+    <div class="ant-upload-text">Upload</div>
+  </ng-container>
+  <img *ngIf="avatarUrl" [src]="avatarUrl" style="width: 100%" />
+</nz-upload>
+
+</div>
+
+    <button nz-button nzType="default">Cancel</button>
+    <button nz-button nzType="default">Save</button>
+   
+</form>
