--- a/src/app/pages/listing/listing/listing.component.html
+++ b/src/app/pages/listing/listing/listing.component.html
@@ -117,6 +117,8 @@
             </nz-form-control>
           </ng-container>
         </nz-modal>
+
+        <nz-divider nzType="vertical"></nz-divider>
       </td>
     </tr>
   </tbody>
