--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,10 @@
         <span nz-icon nzType="usergroup-add" nzTheme="outline"></span> 
         <span routerLink="/merchantbanner">Merchant Banners</span>
       </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="team" nzTheme="outline"></span> 
+        <span routerLink="/team">My Team</span>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
