--- a/src/app/pages/rewards-add/rewards-add.component.html
+++ b/src/app/pages/rewards-add/rewards-add.component.html
@@ -1,96 +1,17 @@
-<form
-  nz-form
-  nzLayout="vertical"
-  [formGroup]="validateForm"
-  (ngSubmit)="submitForm()"
->
-  <h1>Add Rewards</h1>
-
-  <nz-form-item>
-    <nz-form-label
-      [nzSm]="6"
-      [nzXs]="24"
-      nzFor="nickname"
-      nzRequired
-      nzTooltipTitle="Employee Full Names"
+<form [formGroup]="categoryAddForm">
+  <h1>Add Category</h1>
+  <div class="form-group">
+    <label for="exampleFormControlInput1">Category</label>
+    <input 
+      formControlName="categoryName" 
+      type="categoryName" 
+      class="form-control" 
+      id="exampleFormControlInput1" 
+      placeholder="categoryName"
     >
-      <span>Reward Title</span>
-    </nz-form-label>
+  </div>
 
-    <nz-form-control
-      [nzSm]="14"
-      [nzXs]="24"
-      nzErrorTip="Please input employee Fullnames!"
-    >
-      <input nz-input id="nickname" formControlName="names" />
-    </nz-form-control>
-  </nz-form-item>
-
-  <nz-form-item>
-    <nz-form-label
-      [nzSm]="6"
-      [nzXs]="24"
-      nzFor="empNo"
-      nzRequired
-      nzTooltipTitle="Employee Number i.e. 00300305"
-    >
-      <span>Select Reward Category</span>
-    </nz-form-label>
-
-    <nz-form-control
-      [nzSm]="14"
-      [nzXs]="24"
-      nzErrorTip="Please input employee Number!"
-    >
-      <input nz-input id="empNo" formControlName="employeeno" />
-    </nz-form-control>
-  </nz-form-item>
-
-  <nz-form-item>
-    <nz-form-label
-      [nzSm]="6"
-      [nzXs]="24"
-      nzFor="AENo"
-      nzRequired
-      nzTooltipTitle=" Enter AE Number from PMEC or S Number"
-    >
-      <span>Rewards Point</span>
-    </nz-form-label>
-
-    <nz-form-control
-      [nzSm]="14"
-      [nzXs]="24"
-      nzErrorTip="Please input employee Number!"
-    >
-      <input nz-input id="AENo" formControlName="aes" />
-    </nz-form-control>
-  </nz-form-item>
-
-  <nz-form-item>
-    <nz-form-label
-      [nzSm]="6"
-      [nzXs]="24"
-      nzFor="AENo"
-      nzRequired
-      nzTooltipTitle=" Enter AE Number from PMEC or S Number"
-    >
-      <span>Source Published Date</span>
-    </nz-form-label>
-    <nz-form-control
-      [nzSm]="14"
-      [nzXs]="24"
-      nzErrorTip="Please input employee Number!"
-    >
-      <input nz-input id="AENo" formControlName="aes" />
-    </nz-form-control>
-  </nz-form-item>
-
-  <!-- <nz-form-item nz-row class="register-area"> -->
-    <button nz-button nzType="default">Cancel</button>
-    <button nz-button nzType="default">Preview</button>
-    <button nz-button nzType="default">Publish</button>
-    <!-- <nz-form-control [nzSpan]="14" [nzOffset]="6">
-      <button nz-button nzType="primary">Cancel</button>
-    </nz-form-control> -->
-  <!-- </nz-form-item> -->
+  <div style="gap: 10px; display: flex;">  
+    <button type="button" class="btn btn-lg btn-primary" (click)="addRewardCategory()">Save</button>
+  </div>
 </form>
