--- a/src/app/pages/rewards/rewards.component.html
+++ b/src/app/pages/rewards/rewards.component.html
@@ -24,12 +24,12 @@
       Rewards Categories
     </button>
 
-    <button nz-button nzType="primary" nzShape="round"  (click)="addReward()"><span nz-icon nzType="plus"></span></button>
+    <button nz-button nzType="primary" nzShape="round"  (click)="addRewardCategories()"><span nz-icon nzType="plus"></span></button>
   </nav>
 
   <div #tabsContentRef class="tabs__content" [ngSwitch]="selectedTab">
     <div *ngSwitchCase="'one'" class="tabs__tab">
-      <nz-table #basicTable [nzData]="listOfRewards">
+      <nz-table #basicTable [nzData]="rewardData">
         <thead>
           <tr>
             <th>Title</th>
@@ -42,13 +42,17 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let data of basicTable.data">
-            <td>{{ data.title }}</td>
-            <td>{{ data.category }}</td>
+          <tr *ngFor="let data of rewardData.data">
+            <td>{{ data.rewardTitle }}</td>
+            <td>
+              <ng-container *ngFor="let category of data.categories; let last = last;">
+                {{category.categoryName}}<span *ngIf="!last">, </span>
+              </ng-container>
+            </td>
             <td>{{ data.type }}</td>
-            <td>{{ data.reedemPoints }}</td>
-            <td>{{ data.expiryDate }}</td>
-            <td>{{ data.status }}</td>
+            <td>{{ data.reedemPoint }}</td>
+            <td>{{ data.pubishDate | date:'dd/MM/yyyy' }}</td>
+            <td>{{data.status === 0 ? 'Active' : 'Inactive'}}</td>
 
             <td>
               <a (click)="submitForm()" nz-icon [nzType]="'edit'"></a>
@@ -82,7 +86,7 @@
       </nz-table>
     </div>
     <div *ngSwitchCase="'two'" class="tabs__tab">
-      <nz-table #basicTable [nzData]="listOfRewardsCategories">
+      <nz-table #basicTable [nzData]="rewardCategoryData" nzExpand="expandTemplate">
         <thead>
           <tr>
             <th>Category</th>
@@ -91,44 +95,31 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let data of basicTable.data">
-            <td>{{ data.category }}</td>
-            <td>{{ data.status }}</td>
+          <tr *ngFor="let data of rewardCategoryData.data" (nzClick)="onRowClick(data)">
+            <td>{{ data.categoryName }}</td>
+            <td>{{data.status === 0 ? 'Active' : 'Inactive'}}</td>
             <td>
-              <a (click)="editRewardCategory()" nz-icon [nzType]="'edit'"></a>
+              <a (click)="editRewardCategory(data)" nz-icon [nzType]="'edit'"></a>
               <nz-divider nzType="vertical"></nz-divider>
 
-              <a (click)="activeDeactivateCategory()" nz-icon [nzType]="'close'"></a>
-              <nz-modal
-                [(nzVisible)]="isCategoryStatus"
-                nzTitle="Deactivate"
-                (nzOnCancel)="handleCancelCategory()"
-                (nzOnOk)="handleOkCategory()"
-              >
-                <ng-container *nzModalContent>
-                  <p>Are you sure you want to Deactivate this?</p>
-                </ng-container>
-              </nz-modal>
+              <a (click)="activeDeactivateCategory(data,1)" *ngIf="data.status" nz-icon [nzType]="'close'"></a>
+              <a (click)="activeDeactivateCategory(data,0)" *ngIf="!data.status" nz-icon [nzType]="'check'"></a>
+
               <nz-divider nzType="vertical"></nz-divider>
 
-              <a (click)="deleteRewardCategory()" nz-icon [nzType]="'delete'"></a>
-              <nz-modal
-                [(nzVisible)]="isCategoryDelete"
-                nzTitle="Delete"
-                (nzOnCancel)="handleCancelDelete()"
-                (nzOnOk)="handleOkDelete()"
-              >
-                <p *nzModalContent>Are you sure you want to delete this?</p>
-              </nz-modal>
+              
+
+              <a (click)="deleteRewardCategory(data)" nz-icon [nzType]="'delete'"></a>
+
             </td>
             
           </tr>
         </tbody>
       </nz-table>
 
-      <!-- <p *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10]">
-                This is tab two content ......
-            </p> -->
+      <div *ngIf="selectedUser">
+        <h3>{{ selectedUser.categoryName }}</h3>
+      </div>
     </div>
   </div>
 </div>
