reward almost complete

--- a/src/app/pages/reward-category-edit/reward-category-edit.component.html
+++ b/src/app/pages/reward-category-edit/reward-category-edit.component.html
@@ -3,11 +3,11 @@
   <div class="form-group">
     <label for="exampleFormControlInput1">Category</label>
     <input 
-      formControlName="category" 
-      type="category" 
+      formControlName="categoryName" 
+      type="categoryName" 
       class="form-control" 
       id="exampleFormControlInput1" 
-      placeholder="category"
+      placeholder="categoryName"
     >
   </div>
 
