--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<!-- <nz-layout class="app-layout">
+<nz-layout class="app-layout">
   <nz-sider class="menu-sidebar"
             nzCollapsible
             nzWidth="256px"
@@ -71,9 +71,4 @@
       </div>
     </nz-content>
   </nz-layout>
-</nz-layout> -->
-
-
-
-
-<!-- <router-outlet></router-outlet> -->
+</nz-layout>
