--- a/src/app/pages/rewards/rewards.component.html
+++ b/src/app/pages/rewards/rewards.component.html
@@ -24,7 +24,6 @@
       Rewards Categories
     </button>
 
-    <button nz-button nzType="primary" nzShape="round"  (click)="addRewardCategories()"><span nz-icon nzType="plus"></span></button>
   </nav>
 
   <div #tabsContentRef class="tabs__content" [ngSwitch]="selectedTab">
@@ -55,7 +54,7 @@
             <td>{{data.status === 0 ? 'Active' : 'Inactive'}}</td>
 
             <td>
-              <a (click)="submitForm()" nz-icon [nzType]="'edit'"></a>
+              <a (click)="editReward(data)" nz-icon [nzType]="'edit'"></a>
               <nz-divider nzType="vertical"></nz-divider>
 
               <a (click)="activeDeactivate()" nz-icon [nzType]="'close'"></a>
@@ -71,19 +70,14 @@
               </nz-modal>
               <nz-divider nzType="vertical"></nz-divider>
 
-              <a (click)="deleteReward()" nz-icon [nzType]="'delete'"></a>
-              <nz-modal
-                [(nzVisible)]="isVisible"
-                nzTitle="Delete"
-                (nzOnCancel)="handleCancel()"
-                (nzOnOk)="handleOk()"
-              >
-                <p *nzModalContent>Are you sure you want to delete this?</p>
-              </nz-modal>
+              <a (click)="deleteReward(data)" nz-icon [nzType]="'delete'"></a>
             </td>
           </tr>
         </tbody>
       </nz-table>
+      <div style="float: right;">
+        <button nz-button nzType="primary" nzShape="round"  (click)="addReward()"><span nz-icon nzType="plus"></span></button>
+      </div>
     </div>
     <div *ngSwitchCase="'two'" class="tabs__tab">
       <nz-table #basicTable [nzData]="rewardCategoryData" nzExpand="expandTemplate">
@@ -116,10 +110,9 @@
           </tr>
         </tbody>
       </nz-table>
-
-      <div *ngIf="selectedUser">
-        <h3>{{ selectedUser.categoryName }}</h3>
-      </div>
+      <div style="float: right;">
+      <button nz-button nzType="primary" nzShape="round"  (click)="addRewardCategories()"><span nz-icon nzType="plus"></span></button>
+    </div>
     </div>
   </div>
 </div>
