--- a/src/app/pages/merchantBanner/merchant-banner/merchant-banner.component.html
+++ b/src/app/pages/merchantBanner/merchant-banner/merchant-banner.component.html
@@ -107,7 +107,7 @@
               <td>{{ data.position}}</td>
               <td>{{ data.perImpressionPrice}}</td>
               <td>
-                <a (click)="editlistOfPriceConfiguration()" nz-icon [nzType]="'edit'"></a>
+                <a (click)="editlistOfPriceConfiguration(data)" nz-icon [nzType]="'edit'"></a>
                 <nz-divider nzType="vertical"></nz-divider>
               </td>
             </tr>
